<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        tools:context=".phone.fragments.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardActiveOrder"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:clipToPadding="false"
            android:padding="4dp"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@android:color/black">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/tvActiveCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="64dp"
                        android:text="@string/active_call"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/ibVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvActiveCall"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:src="@drawable/volume_off" />

                    <ImageButton
                        android:id="@+id/ibMic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvActiveCall"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:src="@drawable/mic_off" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDeliver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/deliver_a"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardActiveOrder" />

        <TextView
            android:id="@+id/tvDefaultPizza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDeliver"
            tools:text="large cheese" />

        <TextView
            android:id="@+id/tvPizzaTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pizza_to"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefaultPizza" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPizzaTo"
            tools:text="350 Ferst Drive, Atlanta, GA, 30332" />

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/order"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddress" />

        <TextView
            android:id="@+id/tvOrderHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/order_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOrder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrderHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:padding="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderHistory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>